<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color5"
    tools:context=".presentation.ui.dashboard.MainActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/logoutBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_10sdp"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingTop="@dimen/_5sdp"
            android:drawablePadding="@dimen/_5sdp"
            android:text="@string/logout"
            android:textColor="@color/color2"
            android:textStyle="bold"
            android:drawableStart="@drawable/logout"
            android:drawableLeft="@drawable/logout" />
    </androidx.cardview.widget.CardView>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/nameUserDashboardTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Halo Paimon"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/circleImageView"
        app:layout_constraintStart_toStartOf="@+id/circleImageView"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/menuDashboardRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameUserDashboardTV" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/informasi"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuDashboardRV" />

    <TextView
        android:id="@+id/liharSemuaTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lihat_semua"
        android:textSize="@dimen/_12ssp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        android:layout_marginRight="@dimen/_10sdp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/informasiDashboardRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>